# bevy_pixelmap

./: Cargo.toml  LICENSE  README.md
assets/shaders/: place_tex.wgsl
examples/simple_example/: Cargo.toml
examples/simple_example/assets/shaders/: sand_sim.wgsl
examples/simple_example/src/: main.rs
src/: chunk_position.rs  lib.rs  main.rs  pixel_map.rs  pixel_map_cpu.rs  pixel_map_cpu_naive.rs  pixel_map_gpu.rs
