[package]
name = "bevy_pixels"
version = "0.1.0"
rust-version = "1.76"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "^0.13"
bevy-inspector-egui = "^0.23"
line_drawing = "1.0.0"
rand = "0.8.5"

