[package]
name = "bevy_pixels"
version = "0.1.0"
resolver = "2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "^0.14"
bevy-inspector-egui = "^0.26"
bytemuck = "1.18.0"
line_drawing = "1.0.0"
rand = "0.8.5"
wgpu = "0.20.1"
